// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SideNav /> create side navigation 1`] = `
<nav
  className="fd-side-nav"
>
  <div
    className="fd-side-nav__main-navigation"
  >
    <ul
      className="fd-nested-list--text-only fd-nested-list level-1"
    >
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<SideNav /> create side navigation 2`] = `
<nav
  className="fd-side-nav"
>
  <div
    className="fd-side-nav__main-navigation"
  >
    <ul
      className="fd-nested-list--text-only fd-nested-list level-1 blue"
    >
      <li
        className="fd-nested-list__group-header"
      >
        Group Title
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
    </ul>
  </div>
  <div
    className="fd-side-nav__main-navigation"
  >
    <ul
      className="fd-nested-list--text-only fd-nested-list level-1"
    >
      <li
        className="fd-nested-list__group-header"
      >
        Group Title
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<SideNav /> create side navigation 3`] = `
<nav
  className="fd-side-nav"
>
  <div
    className="fd-side-nav__main-navigation"
  >
    <ul
      className="fd-nested-list--text-only fd-nested-list level-1"
    >
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item 1
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link has-child"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item 2
          </span>
        </a>
        <ul
          aria-expanded={false}
          aria-hidden={true}
          className="fd-nested-list--text-only fd-nested-list level-1"
        >
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 1
              </span>
            </a>
          </li>
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 2
              </span>
            </a>
          </li>
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 3
              </span>
            </a>
          </li>
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 4
              </span>
            </a>
          </li>
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 5
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item 3
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link has-child"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item 4
          </span>
        </a>
        <ul
          aria-expanded={false}
          aria-hidden={true}
          className="fd-nested-list--text-only fd-nested-list level-1"
        >
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 1
              </span>
            </a>
          </li>
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 2
              </span>
            </a>
          </li>
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 3
              </span>
            </a>
          </li>
          <li
            className="fd-nested-list__item"
          >
            <a
              className="fd-nested-list__link"
              href="#"
              onClick={[Function]}
            >
              <span
                className="fd-nested-list__title"
              >
                Item 4
              </span>
            </a>
          </li>
        </ul>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<SideNav /> create side navigation 4`] = `
<nav
  className="fd-side-nav"
>
  <div
    className="fd-side-nav__main-navigation"
  >
    <ul
      className="fd-nested-list--text-only fd-nested-list level-1"
    >
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link is-selected"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="/"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          >
            Link Item
          </span>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<SideNav /> create side navigation 5`] = `
<nav
  className="fd-side-nav"
  icons={true}
>
  <div
    className="fd-side-nav__main-navigation"
  >
    <ul
      className="fd-nested-list--text-only fd-nested-list level-1"
    >
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          />
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          />
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          />
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          />
        </a>
      </li>
      <li
        className="fd-nested-list__item"
      >
        <a
          className="fd-nested-list__link"
          href="#"
          onClick={[Function]}
        >
          <span
            className="fd-nested-list__icon sap-icon--home"
            role="presentation"
          />
          <span
            className="fd-nested-list__title"
          />
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<SideNav /> create side navigation 6`] = `
<div
  className="fd-side-nav__main-navigation"
>
  <ul
    className="fd-nested-list--text-only fd-nested-list level-1"
  >
    <li
      className="fd-nested-list__item"
    >
      <a
        className="fd-nested-list__link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="fd-nested-list__title"
        >
          Link Item 1
        </span>
      </a>
    </li>
    <li
      className="fd-nested-list__item"
    >
      <a
        className="fd-nested-list__link has-child"
        href="#"
        onClick={[Function]}
      >
        <span
          className="fd-nested-list__title"
        >
          Link Item 2
        </span>
      </a>
      <ul
        aria-expanded={false}
        aria-hidden={true}
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 1
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 2
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 3
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 4
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 5
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="fd-nested-list__item"
    >
      <a
        className="fd-nested-list__link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="fd-nested-list__title"
        >
          Link Item 3
        </span>
      </a>
    </li>
    <li
      className="fd-nested-list__item"
    >
      <a
        className="fd-nested-list__link has-child"
        href="#"
        onClick={[Function]}
      >
        <span
          className="fd-nested-list__title"
        >
          Link Item 4
        </span>
      </a>
      <ul
        aria-expanded={false}
        aria-hidden={true}
        className="fd-nested-list--text-only fd-nested-list level-1"
      >
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 1
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 2
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 3
            </span>
          </a>
        </li>
        <li
          className="fd-nested-list__item"
        >
          <a
            className="fd-nested-list__link"
            href="#"
            onClick={[Function]}
          >
            <span
              className="fd-nested-list__title"
            >
              Item 4
            </span>
          </a>
        </li>
      </ul>
    </li>
    <li
      className="fd-nested-list__item"
    >
      <a
        className="fd-nested-list__link"
        href="#"
        onClick={[Function]}
      >
        <span
          className="fd-nested-list__title"
        >
          Link Item
        </span>
      </a>
    </li>
  </ul>
</div>
`;
